@@ -1,4 +1,20 @@
 (function() {
+  var makeGistHtml = function(gist) {
+    var html ='';
+
+    Object.$values(gist.files).forEach(function(g) {
+      html += '<div class="link-embedder text-paste">';
+      html += '<div class="paste-meta">';
+      html += '<span>Hosted by</span> <a href="http://github.com">GitHub</a>';
+      html += ' - <a href="' + g.raw_url + '">' + g.filename + '</a>'
+      html += '</div>';
+      html += '<pre>' + g.content.replace(/</g, "&lt;") +  '</pre>';
+      html += '</div>';
+    });
+
+    return html;
+  };
+
   Convos.mixin.message = {
     props: ["dialog", "msg", "user"],
     data: function() {
@@ -6,13 +22,22 @@
     },
     computed: {
       computedMessage: function() {
-        var self = this;
+        var m, self = this;
         return self.msg.message.rich({
           after: function(url, id) {
-            if (!self.settings.expandUrls || !self.visible) return;
-            $.get("/api/embed?url=" + encodeURIComponent(url), function(html, textStatus, xhr) {
-              self.loadOffScreen(html, id);
-            });
+            if (!self.settings.expandUrls || !self.visible) {
+              return;
+            }
+            else if (m = url.match(/https?:\/\/gist\.github\.com\/[^\/]+\/(\w+)/)) {
+              $.get("https://api.github.com/gists/" + m[1], function(gist) {
+                self.loadOffScreen(makeGistHtml(gist), id);
+              });
+            }
+            else {
+              $.get("/api/embed?url=" + encodeURIComponent(url), function(html, textStatus, xhr) {
+                self.loadOffScreen(html, id);
+              });
+            }
           }
         });
       }
@@ -40,16 +65,24 @@
       },
       loadOffScreen: function(html, id) {
         if (html.match(/^<a\s/)) return;
-
-        // TODO: Add support for showing paste inline
-        if (html.match(/class=".*(text-paste|text-gist-github)/)) return;
-
-        var self = this;
         var $html = $(html);
         var $a = $('#' + id);
 
         $html.filter("img").add($html.find("img")).addClass("embed materialboxed").on("error", function() { $(this).remove(); });
         $a.parent().append($html).find(".materialboxed").materialbox();
+        $html.find("a").attr("target", "_blank");
+        $html.find("pre").each(function() {
+          var $container = $(this).closest(".link-embedder.text-paste");
+          $container.find(".paste-meta").click(function() {
+            var $message = $container.closest(".convos-message");
+            $container.toggleClass("expanded");
+            $message.closest(".scroll-element").get(0).scrollTo = $message.get(0).offsetTop;
+          });
+          hljs.highlightBlock(this);
+          var code = this.innerHTML.split(/\n\r?|\r/);
+          console.log(code);
+          $(this).replaceWith('<ol class="hljs"><li>' + code.join("</li><li>") + '</li></ol>');
+        });
       },
       statusTooltip: function() {
         return this.dialog.participants[this.msg.from] ? "" : "Not in this channel";
