@@ -18,6 +18,11 @@ dl {
   dd { margin: 0 0 0.5rem 1rem; }
 }
 
+pre {
+  margin: 0;
+  padding: 0;
+}
+
 dl.horizontal {
   margin: 0;
   dt {
